# ssdp

./: .fussyfox.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  ssdp.py
.github/workflows/: ci.yml  linter-requirements.txt  release.yml
examples/: request_msearch.py  respond_msearch.py
ssdp/: __init__.py  __main__.py  aio.py  asyncio.py  deprecation.py  entity.py  lexers.py  messages.py  network.py  server.py  socketserver.py
tests/: conftest.py  fixtures.py  test_deprecation.py  test_lexers.py  test_main.py  test_messages.py  test_network.py  test_ssdp.py
