[metadata]
name = ssdp
author = Johannes Hoppe
author-email = info@johanneshoppe.com
summary = Python asyncio library for Simple Service Discovery Protocol (SSDP).
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/codingjoe/ssdp
license = MIT License
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: AsyncIO
    Topic :: System :: Networking
    Topic :: Software Development :: Libraries
    Topic :: Home Automation
keywords =
    ssdp
    python
    asyncio
    upnp
    iot

[options]
setup_requires =
    pbr
    pytest-runner
tests_require =
    pytest
    pytest-cov

[files]
packages =
    ssdp

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-glob='*.rst'
    --doctest-modules
    --cov=ssdp

[coverage:report]
show_missing = True

[pycodestyle]
max-line-length=99
exclude = fixtures.py

[pydocstyle]
add_ignore = D1,D401
