[metadata]
name = ssdp
author = Johannes Hoppe
author_email = info@johanneshoppe.com
summary = Python asyncio library for Simple Service Discovery Protocol (SSDP).
long_description = file: README.rst
home-page = https://github.com/codingjoe/ssdp
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: AsyncIO
    Topic :: System :: Networking
    Topic :: Software Development :: Libraries
    Topic :: Home Automation
keywords =
    ssdp
    python
    asyncio
    upnp
    iot

python_requires = '>=3.5'

[options]
packages = find:
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    pytest
    pytest-cov

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-glob='*.rst'
    --doctest-modules
    --cov=ssdp

[coverage:report]
show_missing = True

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = venv,.tox,.eggs

[pydocstyle]
add-ignore = D1

[isort]
atomic = true
line_length = 88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_first_party = ssdp, tests
default_section=THIRDPARTY
combine_as_imports = true